--- a/frontend/src/component/TimedEvent.styl
+++ b/frontend/src/component/TimedEvent.styl
@@ -13,6 +13,9 @@
       display none
     &:hover
       text-decoration underline
+    &Contents
+      text-overflow ellipsis
+      overflow hidden
   &__bottom
     overflow hidden
     display flex
